--- a/index.html
+++ b/index.html
@@ -13,93 +13,72 @@
   <meta property="og:image" content="assets/images/osu-daytraders-logo.png"/>
   <meta name="twitter:card" content="summary_large_image"/>
 
-  <!-- Page polish to match Applications/Events with strong imagery -->
+  <!-- Minimal, brand-consistent polish (matches Applications/Events) -->
   <style>
     :root{
       --scarlet:#c4122f; --ink:#121212; --muted:#646464; --panel:#fff; --surface:#f6f6f6;
     }
     body{background:var(--surface)}
 
-    /* Header is from global CSS */
-
-    /* HERO with image + overlay */
+    /* HERO — clean gradient, no busy photos */
     .hero{
-      position:relative; overflow:hidden; color:#fff;
-      padding:clamp(3.5rem,6vw,6rem) 1rem;
-      background:#7f0d1f; /* fallback */
-      isolation:isolate;
+      position:relative; color:#fff; overflow:hidden;
+      background:radial-gradient(1200px 480px at 70% -10%, #de2946 0%, #c4122f 45%, #7c0e20 100%);
+      padding:clamp(3.2rem,6vw,5.5rem) 1rem;
+      box-shadow:inset 0 -6px 20px rgba(0,0,0,.1);
     }
-    .hero::before{
-      content:""; position:absolute; inset:0; z-index:-2;
-      background:url("assets/images/slide-1.png") center/cover no-repeat;
-      filter:saturate(1.05) brightness(.7);
-      transform:scale(1.03);
-    }
-    .hero::after{
-      content:""; position:absolute; inset:0; z-index:-1;
-      background:radial-gradient(1400px 520px at 70% -10%, rgba(220,42,71,.9) 0%, rgba(196,18,47,.92) 45%, rgba(122,9,24,.95) 100%);
-      mix-blend-mode:multiply; opacity:.95;
-    }
-    .hero .wrap{max-width:1100px;margin:0 auto;display:grid;gap:1.2rem}
-    .hero h1{margin:0;font-weight:1000;letter-spacing:.01em;
-      font-size:clamp(2rem,4.6vw,3.6rem);line-height:1.06}
-    .hero p{margin:.25rem 0 1.1rem;max-width:800px;color:#ffebee;font-size:clamp(1rem,1.25vw,1.15rem)}
+    .hero .wrap{max-width:1100px;margin:0 auto}
+    .hero h1{margin:0 0 .4rem 0;font-weight:1000;letter-spacing:.01em;font-size:clamp(2rem,4.6vw,3.6rem);line-height:1.06}
+    .hero p{margin:.35rem 0 1.1rem;max-width:820px;color:#ffeef1;font-size:clamp(1rem,1.25vw,1.15rem)}
     .cta-row{display:flex;gap:.6rem;flex-wrap:wrap}
     .btn{display:inline-block;border-radius:999px;padding:.9rem 1.15rem;font-weight:900;text-decoration:none}
     .btn-primary{background:#fff;color:#111;box-shadow:0 10px 24px rgba(255,255,255,.25)}
     .btn-outline{background:transparent;color:#fff;border:2px solid #fff}
     .btn:hover{filter:brightness(.95)}
 
-    /* Page content */
+    /* Page shell */
     .page{max-width:1100px;margin:0 auto;padding:2rem 1rem 3rem}
 
-    /* Feature image cards */
-    .grid{display:grid;gap:1rem}
-    .grid-3{grid-template-columns:repeat(3,1fr)}
-    @media (max-width:900px){.grid-3{grid-template-columns:1fr}}
-    .imgcard{
-      position:relative; overflow:hidden; border-radius:20px; color:#fff;
-      min-height:210px; box-shadow:0 18px 44px rgba(0,0,0,.18);
-    }
-    .imgcard img{position:absolute; inset:0; width:100%; height:100%; object-fit:cover; filter:brightness(.72) saturate(1.05)}
-    .imgcard .badge{position:absolute; top:.75rem; left:.75rem; background:#fff;color:#111;font-weight:900;font-size:.75rem;padding:.3rem .6rem;border-radius:999px}
-    .imgcard .cap{
-      position:absolute; left:0; right:0; bottom:0; padding:1rem 1rem 1.15rem;
-      background:linear-gradient(180deg,rgba(0,0,0,0) 0%, rgba(0,0,0,.55) 65%, rgba(0,0,0,.75) 100%);
-    }
-    .imgcard h3{margin:0 0 .25rem 0;font-size:1.15rem}
-    .imgcard p{margin:0;color:#e9e9e9}
-
-    /* Section headers */
+    /* Sections */
     .section-head{display:flex;align-items:baseline;justify-content:space-between;gap:1rem;margin:1.4rem 0 .8rem}
     .section-head h2{margin:0;font-weight:1000;color:var(--ink);font-size:clamp(1.4rem,2.4vw,1.9rem)}
     .btn-light{background:#fff;color:#111;border:1px solid #eee;border-radius:999px;padding:.7rem 1rem;font-weight:900;text-decoration:none}
 
-    /* Next event preview (image + details) */
-    .next-event{display:grid;gap:1rem;grid-template-columns:1.05fr .95fr}
-    @media (max-width:900px){.next-event{grid-template-columns:1fr}}
-    .card{
-      background:var(--panel); border:1px solid #eee; border-radius:20px;
-      padding:clamp(1rem,2vw,1.25rem); box-shadow:0 16px 40px rgba(0,0,0,.08);
+    /* Simple three-up features (no images) */
+    .grid{display:grid;gap:1rem}
+    .grid-3{grid-template-columns:repeat(3,1fr)}
+    @media (max-width:900px){.grid-3{grid-template-columns:1fr}}
+    .feature{
+      background:var(--panel);border:1px solid #eee;border-radius:20px;padding:1.1rem;
+      box-shadow:0 16px 40px rgba(0,0,0,.08);
       transition:transform .14s ease, box-shadow .14s ease;
     }
-    .card:hover{transform:translateY(-2px); box-shadow:0 24px 56px rgba(0,0,0,.12)}
-    .event-visual{
-      position:relative; overflow:hidden; border-radius:16px; min-height:220px;
-      background:#111;
+    .feature:hover{transform:translateY(-2px);box-shadow:0 24px 56px rgba(0,0,0,.12)}
+    .feature h3{margin:.1rem 0 .35rem;color:var(--ink);font-size:1.05rem}
+    .feature p{margin:0;color:#535353}
+
+    /* Next Event card */
+    .next-event{display:grid;gap:1rem;grid-template-columns:1fr 1fr}
+    @media (max-width:900px){.next-event{grid-template-columns:1fr}}
+    .card{
+      background:var(--panel);border:1px solid #eee;border-radius:20px;
+      padding:clamp(1rem,2vw,1.25rem);box-shadow:0 16px 40px rgba(0,0,0,.08);
+      transition:transform .14s ease, box-shadow .14s ease;
     }
-    .event-visual img{position:absolute;inset:0;width:100%;height:100%;object-fit:cover;filter:brightness(.8)}
-    .event-chip{position:absolute; top:.6rem; left:.6rem;background:var(--scarlet);color:#fff;font-weight:900;border-radius:999px;font-size:.75rem;padding:.3rem .6rem}
+    .card:hover{transform:translateY(-2px);box-shadow:0 24px 56px rgba(0,0,0,.12)}
     .event-title{margin:.1rem 0 .35rem 0;font-weight:1000;color:var(--ink);font-size:1.35rem}
     .meta{display:grid;gap:.35rem;color:#565656}
     .event-actions{display:flex;gap:.5rem;flex-wrap:wrap;margin-top:.6rem}
     .btn-scarlet{background:var(--scarlet);color:#fff;border-radius:999px;padding:.85rem 1.05rem;font-weight:900;text-decoration:none}
 
-    /* Gallery */
-    .gallery{display:grid;gap:.75rem;grid-template-columns:2fr 1fr 1fr}
-    @media (max-width:900px){.gallery{grid-template-columns:1fr}}
-    .gallery figure{position:relative; overflow:hidden; border-radius:18px; margin:0; min-height:180px; box-shadow:0 14px 36px rgba(0,0,0,.12)}
-    .gallery img{position:absolute; inset:0; width:100%; height:100%; object-fit:cover}
+    /* Tiny accent card to the left of details */
+    .event-pill{
+      display:grid;gap:.45rem;align-content:start;
+      background:linear-gradient(180deg,#fff,#fafafa);border:1px solid #eee;border-radius:18px;
+      padding:1rem
+    }
+    .chip{display:inline-block;background:var(--scarlet);color:#fff;font-weight:900;font-size:.75rem;padding:.3rem .6rem;border-radius:999px}
+    .k{color:#333}
   </style>
 </head>
 <body>
@@ -134,54 +113,41 @@
     </div>
   </section>
 
-  <!-- Feature image cards -->
+  <!-- WHAT WE DO (clean, no photos) -->
   <main class="page">
     <div class="section-head">
       <h2>What we do</h2>
       <a class="btn-light" href="resources.html">View resources</a>
     </div>
     <section class="grid grid-3">
-      <article class="imgcard">
-        <img src="assets/images/slide-2.png" alt="Strategy Lab"/>
-        <span class="badge">Practice</span>
-        <div class="cap">
-          <h3>Strategy Lab</h3>
-          <p>Backtesting, journal review, and Q&A together.</p>
-        </div>
+      <article class="feature">
+        <h3>Strategy Lab</h3>
+        <p>Backtesting, journal review, and Q&A together to make process repeatable.</p>
       </article>
-      <article class="imgcard">
-        <img src="assets/images/trading-committee.jpg" alt="Risk & Process"/>
-        <span class="badge">Standards</span>
-        <div class="cap">
-          <h3>Risk & Process</h3>
-          <p>Sizing, stop logic, and a repeatable framework.</p>
-        </div>
+      <article class="feature">
+        <h3>Risk & Process</h3>
+        <p>Position sizing, stop logic, and pre/post-trade checklists that keep you sane.</p>
       </article>
-      <article class="imgcard">
-        <img src="assets/images/slide-3.png" alt="Speakers"/>
-        <span class="badge">Community</span>
-        <div class="cap">
-          <h3>Guest Speakers</h3>
-          <p>Traders, quants, and builders who bring real edge.</p>
-        </div>
+      <article class="feature">
+        <h3>Speakers & Workshops</h3>
+        <p>Traders, quants, and builders sharing real lessons, not highlight reels.</p>
       </article>
     </section>
 
-    <!-- Next Event with visual -->
+    <!-- NEXT UPCOMING EVENT -->
     <div class="section-head" style="margin-top:1.6rem">
-      <h2>Next event</h2>
+      <h2>Next upcoming event</h2>
       <a class="btn-light" href="events.html">Open calendar</a>
     </div>
     <section class="next-event">
-      <aside class="event-visual">
-        <img src="assets/images/slide-1.png" alt="Weekly Meeting"/>
-        <span class="event-chip">Weekly</span>
+      <aside class="event-pill">
+        <span class="chip" id="evChip">Weekly</span>
+        <div><span class="k">When:</span> <span id="evWhen">Mon, Jan 1 • 6:00 PM ET</span></div>
+        <div><span class="k">Where:</span> <span id="evWhere">Virtual (Zoom)</span></div>
       </aside>
       <article class="card">
         <h3 class="event-title" id="evName">Weekly Meeting</h3>
         <div class="meta">
-          <div id="evWhen">Mon, Jan 1 • 6:00 PM ET</div>
-          <div id="evWhere">Virtual (Zoom)</div>
           <p id="evDesc">Market rundown, risk review, and a breakout scalp workflow.</p>
         </div>
         <div class="event-actions">
@@ -189,16 +155,6 @@
           <a class="btn-light" id="evAdd" target="_blank" rel="noopener">Add to Google Calendar</a>
         </div>
       </article>
-    </section>
-
-    <!-- Gallery strip -->
-    <div class="section-head" style="margin-top:1.6rem">
-      <h2>Inside the club</h2>
-    </div>
-    <section class="gallery">
-      <figure><img src="assets/images/slide-2.png" alt="Workshop session"/></figure>
-      <figure><img src="assets/images/slide-3.png" alt="Study group"/></figure>
-      <figure><img src="assets/images/trading-committee.jpg" alt="Committee review"/></figure>
     </section>
   </main>
 
@@ -212,7 +168,7 @@
     // Footer year
     document.getElementById('year').textContent = new Date().getFullYear();
 
-    // Next-event data (kept consistent with Events page)
+    // Next-event data
     const now = new Date();
     const next = {
       name: "Weekly Meeting",
@@ -232,7 +188,7 @@
     document.getElementById("evDesc").textContent = next.description;
     document.getElementById("evZoom").href = next.zoom;
 
-    // Google Calendar link
+    // Google Calendar deep link
     function pad(n){return String(n).padStart(2,"0")}
     const end = new Date(next.start.getTime() + (next.duration||60)*60000);
     const fmtICS = d => `${d.getFullYear()}${pad(d.getMonth()+1)}${pad(d.getDate())}T${pad(d.getHours())}${pad(d.getMinutes())}00`;
