--- a/index.html
+++ b/index.html
@@ -13,51 +13,69 @@
   <meta property="og:image" content="assets/images/osu-daytraders-logo.png"/>
   <meta name="twitter:card" content="summary_large_image"/>
 
-  <!-- Minimal, brand-consistent polish (matches Applications/Events) -->
+  <!-- Minimal, centered, brand-consistent polish -->
   <style>
     :root{
       --scarlet:#c4122f; --ink:#121212; --muted:#646464; --panel:#fff; --surface:#f6f6f6;
     }
     body{background:var(--surface)}
 
-    /* HERO — clean gradient, no busy photos */
+    /* ===== HERO (centered) ===== */
     .hero{
-      position:relative; color:#fff; overflow:hidden;
+      position:relative; color:#fff; overflow:hidden; text-align:center;
       background:radial-gradient(1200px 480px at 70% -10%, #de2946 0%, #c4122f 45%, #7c0e20 100%);
-      padding:clamp(3.2rem,6vw,5.5rem) 1rem;
-      box-shadow:inset 0 -6px 20px rgba(0,0,0,.1);
+      padding:clamp(3.4rem,6vw,6rem) 1rem;
+      box-shadow:inset 0 -6px 20px rgba(0,0,0,.12);
+      isolation:isolate;
     }
-    .hero .wrap{max-width:1100px;margin:0 auto}
-    .hero h1{margin:0 0 .4rem 0;font-weight:1000;letter-spacing:.01em;font-size:clamp(2rem,4.6vw,3.6rem);line-height:1.06}
-    .hero p{margin:.35rem 0 1.1rem;max-width:820px;color:#ffeef1;font-size:clamp(1rem,1.25vw,1.15rem)}
-    .cta-row{display:flex;gap:.6rem;flex-wrap:wrap}
-    .btn{display:inline-block;border-radius:999px;padding:.9rem 1.15rem;font-weight:900;text-decoration:none}
+    .hero .wrap{max-width:960px;margin:0 auto}
+    .hero h1{
+      margin:0 0 .5rem 0;font-weight:1000;letter-spacing:.01em;
+      font-size:clamp(2.2rem,4.8vw,3.8rem);line-height:1.06
+    }
+    .hero p{
+      margin:.4rem auto 1.2rem;max-width:780px;color:#ffeef1;
+      font-size:clamp(1rem,1.25vw,1.15rem)
+    }
+    /* faint accent image on right, very subtle */
+    .hero::after{
+      content:""; position:absolute; right:-120px; top:-80px; width:520px; height:520px;
+      background:url("assets/images/osu-daytraders-logo.png") center/contain no-repeat;
+      opacity:.06; filter:grayscale(1) contrast(1.1);
+      pointer-events:none; z-index:0;
+    }
+    .cta-row{display:flex;justify-content:center;gap:.6rem;flex-wrap:wrap;position:relative;z-index:1}
+    .btn{display:inline-block;border-radius:999px;padding:.95rem 1.2rem;font-weight:900;text-decoration:none}
     .btn-primary{background:#fff;color:#111;box-shadow:0 10px 24px rgba(255,255,255,.25)}
     .btn-outline{background:transparent;color:#fff;border:2px solid #fff}
     .btn:hover{filter:brightness(.95)}
 
-    /* Page shell */
+    /* ===== PAGE SHELL ===== */
     .page{max-width:1100px;margin:0 auto;padding:2rem 1rem 3rem}
 
-    /* Sections */
-    .section-head{display:flex;align-items:baseline;justify-content:space-between;gap:1rem;margin:1.4rem 0 .8rem}
-    .section-head h2{margin:0;font-weight:1000;color:var(--ink);font-size:clamp(1.4rem,2.4vw,1.9rem)}
-    .btn-light{background:#fff;color:#111;border:1px solid #eee;border-radius:999px;padding:.7rem 1rem;font-weight:900;text-decoration:none}
+    /* ===== SECTION HEADERS (centered) ===== */
+    .section-head{display:grid;justify-items:center;margin:1.6rem 0 1rem}
+    .section-head h2{
+      margin:0 0 .7rem 0;font-weight:1000;color:var(--ink);
+      font-size:clamp(1.5rem,2.6vw,2rem)
+    }
+    .btn-light{background:#fff;color:#111;border:1px solid #eee;border-radius:999px;padding:.75rem 1.05rem;font-weight:900;text-decoration:none}
 
-    /* Simple three-up features (no images) */
+    /* ===== FEATURE CARDS (no images) ===== */
     .grid{display:grid;gap:1rem}
     .grid-3{grid-template-columns:repeat(3,1fr)}
     @media (max-width:900px){.grid-3{grid-template-columns:1fr}}
     .feature{
-      background:var(--panel);border:1px solid #eee;border-radius:20px;padding:1.1rem;
+      background:var(--panel);border:1px solid #eee;border-radius:20px;padding:1.15rem;
       box-shadow:0 16px 40px rgba(0,0,0,.08);
       transition:transform .14s ease, box-shadow .14s ease;
     }
     .feature:hover{transform:translateY(-2px);box-shadow:0 24px 56px rgba(0,0,0,.12)}
-    .feature h3{margin:.1rem 0 .35rem;color:var(--ink);font-size:1.05rem}
+    .feature h3{margin:.1rem 0 .35rem;color:var(--ink);font-size:1.08rem}
     .feature p{margin:0;color:#535353}
 
-    /* Next Event card */
+    /* ===== NEXT EVENT ===== */
+    .next-wrap{max-width:900px;margin:0 auto}
     .next-event{display:grid;gap:1rem;grid-template-columns:1fr 1fr}
     @media (max-width:900px){.next-event{grid-template-columns:1fr}}
     .card{
@@ -69,15 +87,15 @@
     .event-title{margin:.1rem 0 .35rem 0;font-weight:1000;color:var(--ink);font-size:1.35rem}
     .meta{display:grid;gap:.35rem;color:#565656}
     .event-actions{display:flex;gap:.5rem;flex-wrap:wrap;margin-top:.6rem}
-    .btn-scarlet{background:var(--scarlet);color:#fff;border-radius:999px;padding:.85rem 1.05rem;font-weight:900;text-decoration:none}
+    .btn-scarlet{background:var(--scarlet);color:#fff;border-radius:999px;padding:.9rem 1.1rem;font-weight:900;text-decoration:none}
 
-    /* Tiny accent card to the left of details */
+    /* compact info card */
     .event-pill{
-      display:grid;gap:.45rem;align-content:start;
+      display:grid;gap:.5rem;align-content:start;
       background:linear-gradient(180deg,#fff,#fafafa);border:1px solid #eee;border-radius:18px;
       padding:1rem
     }
-    .chip{display:inline-block;background:var(--scarlet);color:#fff;font-weight:900;font-size:.75rem;padding:.3rem .6rem;border-radius:999px}
+    .chip{display:inline-block;background:var(--scarlet);color:#fff;font-weight:900;font-size:.75rem;padding:.32rem .65rem;border-radius:999px}
     .k{color:#333}
   </style>
 </head>
@@ -113,13 +131,13 @@
     </div>
   </section>
 
-  <!-- WHAT WE DO (clean, no photos) -->
   <main class="page">
+    <!-- WHAT WE DO -->
     <div class="section-head">
       <h2>What we do</h2>
       <a class="btn-light" href="resources.html">View resources</a>
     </div>
-    <section class="grid grid-3">
+    <section class="grid grid-3" style="max-width:980px;margin:0 auto">
       <article class="feature">
         <h3>Strategy Lab</h3>
         <p>Backtesting, journal review, and Q&A together to make process repeatable.</p>
@@ -135,30 +153,31 @@
     </section>
 
     <!-- NEXT UPCOMING EVENT -->
-    <div class="section-head" style="margin-top:1.6rem">
+    <div class="section-head" style="margin-top:1.8rem">
       <h2>Next upcoming event</h2>
       <a class="btn-light" href="events.html">Open calendar</a>
     </div>
-    <section class="next-event">
-      <aside class="event-pill">
-        <span class="chip" id="evChip">Weekly</span>
-        <div><span class="k">When:</span> <span id="evWhen">Mon, Jan 1 • 6:00 PM ET</span></div>
-        <div><span class="k">Where:</span> <span id="evWhere">Virtual (Zoom)</span></div>
-      </aside>
-      <article class="card">
-        <h3 class="event-title" id="evName">Weekly Meeting</h3>
-        <div class="meta">
-          <p id="evDesc">Market rundown, risk review, and a breakout scalp workflow.</p>
-        </div>
-        <div class="event-actions">
-          <a class="btn-scarlet" id="evZoom" target="_blank" rel="noopener">Register on Zoom</a>
-          <a class="btn-light" id="evAdd" target="_blank" rel="noopener">Add to Google Calendar</a>
-        </div>
-      </article>
+    <section class="next-wrap">
+      <div class="next-event">
+        <aside class="event-pill">
+          <span class="chip" id="evChip">Weekly</span>
+          <div><span class="k">When:</span> <span id="evWhen">Mon, Jan 1 • 6:00 PM ET</span></div>
+          <div><span class="k">Where:</span> <span id="evWhere">Virtual (Zoom)</span></div>
+        </aside>
+        <article class="card">
+          <h3 class="event-title" id="evName">Weekly Meeting</h3>
+          <div class="meta">
+            <p id="evDesc">Market rundown, risk review, and a breakout scalp workflow.</p>
+          </div>
+          <div class="event-actions">
+            <a class="btn-scarlet" id="evZoom" target="_blank" rel="noopener">Register on Zoom</a>
+            <a class="btn-light" id="evAdd" target="_blank" rel="noopener">Add to Google Calendar</a>
+          </div>
+        </article>
+      </div>
     </section>
   </main>
 
-  <!-- Footer -->
   <footer class="site-footer">
     <p>&copy; <span id="year"></span> OSU Day Traders • Student Organization</p>
   </footer>
@@ -168,7 +187,7 @@
     // Footer year
     document.getElementById('year').textContent = new Date().getFullYear();
 
-    // Next-event data
+    // Next-event data (kept consistent with Events page)
     const now = new Date();
     const next = {
       name: "Weekly Meeting",
