--- a/index.html
+++ b/index.html
@@ -2,264 +2,88 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>OSU Day Traders</title>
-  <link rel="icon" href="assets/icons/favicon.ico" />
+  <link rel="icon" href="assets/icons/favicon.ico"/>
 
   <style>
-    :root {
-      --scarlet: #c4122f;
-      --ink: #121212;
-      --muted: #5b5b5b;
-      --surface: #f6f6f6;
-      --panel: #fff;
+    :root{
+      --scarlet:#c4122f; --ink:#121212; --muted:#5b5b5b; --surface:#f6f6f6; --panel:#fff;
     }
+    *{box-sizing:border-box}
+    body{margin:0;font-family:system-ui,-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:var(--ink);background:var(--surface)}
 
-    body {
-      background: var(--surface);
-      margin: 0;
-      font-family: system-ui, -apple-system, "Segoe UI", Roboto, sans-serif;
-      color: var(--ink);
-    }
+    /* Header */
+    header{background:var(--scarlet);padding:.9rem 1.25rem;display:flex;align-items:center;justify-content:space-between}
+    .brand{display:flex;align-items:center;gap:.55rem;color:#fff;text-decoration:none;font-weight:800}
+    .brand img{width:34px;height:34px;border-radius:50%}
+    nav ul{display:flex;gap:1.25rem;margin:0;padding:0;list-style:none}
+    nav a{color:#fff;text-decoration:none;font-weight:700;font-size:.95rem;opacity:.95}
+    nav a:hover,.active{opacity:1}
 
-    header {
-      background: var(--scarlet);
-      padding: 0.9rem 2rem;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
+    /* Hero */
+    .hero{
+      position:relative;overflow:hidden;text-align:center;color:#fff;
+      background:linear-gradient(150deg,#c4122f 0%,#8a0d21 100%);
+      padding:clamp(3.2rem,7vw,5rem) 1rem 3.2rem;
     }
+    .hero::after{
+      content:"";position:absolute;right:-110px;top:-70px;width:520px;height:520px;
+      background:url("assets/images/translogo.png") center/contain no-repeat;opacity:.08;mix-blend-mode:overlay;filter:brightness(1.1)
+    }
+    .hero-inner{position:relative;z-index:1;max-width:820px;margin:0 auto}
+    .hero h1{margin:0 0 .8rem;font-size:clamp(2.2rem,5vw,3.6rem);font-weight:900;letter-spacing:.01em}
+    .hero p{max-width:560px;margin:.2rem auto 1.6rem;color:rgba(255,255,255,.92);line-height:1.55}
+    .btn-row{display:flex;justify-content:center;gap:.9rem;flex-wrap:wrap}
+    .btn{display:inline-block;border-radius:999px;padding:.85rem 1.3rem;font-weight:800;font-size:1rem;text-decoration:none;transition:.18s}
+    .btn-white{background:#fff;color:var(--scarlet)}
+    .btn-outline{border:2px solid #fff;color:#fff}
+    .btn:hover{transform:translateY(-2px);filter:brightness(1.05)}
 
-    header .brand {
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
-      text-decoration: none;
-      color: #fff;
-      font-weight: 700;
-      font-size: 1.1rem;
-    }
+    /* Sections */
+    .section{max-width:1100px;margin:0 auto;padding:3rem 1rem 3.5rem}
+    .section h2{font-size:1.8rem;text-align:center;margin:0 0 2rem;font-weight:900}
 
-    header img {
-      width: 34px;
-      height: 34px;
-      border-radius: 50%;
-    }
+    /* Features */
+    .features{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:1.4rem}
+    .feature{background:var(--panel);border-radius:18px;padding:1.5rem;box-shadow:0 6px 24px rgba(0,0,0,.08);transition:.22s}
+    .feature:hover{transform:translateY(-4px);box-shadow:0 12px 32px rgba(0,0,0,.12)}
+    .feature h3{margin:0 0 .4rem;font-weight:900}
+    .feature p{margin:0;color:var(--muted);line-height:1.45}
+    .center{display:flex;justify-content:center;margin-top:2rem}
 
-    nav ul {
-      list-style: none;
-      display: flex;
-      gap: 1.5rem;
-      margin: 0;
-      padding: 0;
+    /* Next Event (revamped) */
+    .next-wrap{
+      background:linear-gradient(180deg,#ffffff 0%,#f3f3f3 100%);
+      border-top:1px solid #eee;padding:3rem 1rem 4rem
     }
+    .next-wrap h2{text-align:center;font-size:1.8rem;font-weight:900;margin:0 0 1.6rem}
+    .event-card{
+      position:relative;background:var(--panel);max-width:760px;margin:0 auto;padding:2rem 1.6rem 2.1rem;
+      border-radius:22px;box-shadow:0 14px 38px rgba(0,0,0,.12)
+    }
+    .event-card::before{
+      content:"";position:absolute;inset:-2px;z-index:-1;border-radius:24px;
+      background:radial-gradient(1200px 200px at 50% 0,rgba(196,18,47,.12),transparent 60%)
+    }
+    .pill{display:inline-block;background:var(--scarlet);color:#fff;font-weight:900;font-size:.85rem;padding:.38rem 1rem;border-radius:999px}
+    .event-title{margin:.6rem 0 1rem;font-size:1.4rem;font-weight:900;text-align:center}
+    .meta-list{display:grid;gap:.5rem;margin:0 auto 1rem;padding:0;max-width:520px}
+    .meta-row{display:flex;gap:.5rem;justify-content:center;flex-wrap:wrap;color:#333}
+    .meta-row b{font-weight:800}
+    .desc{max-width:620px;margin:.3rem auto 1.1rem;text-align:center;color:#444}
+    .event-actions{display:flex;justify-content:center;gap:.8rem;flex-wrap:wrap}
+    .btn-red{background:var(--scarlet);color:#fff}
+    .btn-ghost{border:2px solid #e5e5e5;color:#222;background:#fff}
 
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: 600;
-      font-size: 0.97rem;
-      transition: opacity 0.2s ease;
-    }
-
-    nav a:hover,
-    nav a.active {
-      opacity: 0.8;
-    }
-
-    /* HERO SECTION */
-    .hero {
-      position: relative;
-      background: linear-gradient(150deg, #c4122f 0%, #8a0d21 100%);
-      color: #fff;
-      text-align: center;
-      padding: clamp(3.5rem, 8vw, 5.5rem) 1rem 3.5rem;
-      overflow: hidden;
-    }
-
-    .hero::after {
-      content: "";
-      position: absolute;
-      right: -100px;
-      top: -60px;
-      width: 480px;
-      height: 480px;
-      background: url("assets/images/translogo.png") center/contain no-repeat;
-      opacity: 0.08;
-      mix-blend-mode: overlay;
-      pointer-events: none;
-      z-index: 0;
-      filter: brightness(1.1);
-    }
-
-    .hero-content {
-      position: relative;
-      z-index: 1;
-      max-width: 800px;
-      margin: 0 auto;
-    }
-
-    .hero h1 {
-      font-size: clamp(2.2rem, 5vw, 3.5rem);
-      font-weight: 900;
-      margin: 0 0 0.8rem;
-    }
-
-    .hero p {
-      font-size: 1.05rem;
-      max-width: 560px;
-      margin: 0 auto 1.8rem;
-      color: rgba(255, 255, 255, 0.9);
-      line-height: 1.55;
-    }
-
-    .btn-group {
-      display: flex;
-      justify-content: center;
-      gap: 0.9rem;
-      flex-wrap: wrap;
-    }
-
-    .btn {
-      padding: 0.85rem 1.3rem;
-      border-radius: 999px;
-      font-weight: 700;
-      font-size: 1rem;
-      cursor: pointer;
-      text-decoration: none;
-      transition: 0.2s ease;
-    }
-
-    .btn-white {
-      background: #fff;
-      color: var(--scarlet);
-    }
-
-    .btn-outline {
-      border: 2px solid #fff;
-      color: #fff;
-    }
-
-    .btn-white:hover,
-    .btn-outline:hover {
-      transform: translateY(-2px);
-      filter: brightness(1.08);
-    }
-
-    /* SECTION SPACING */
-    .section {
-      max-width: 1100px;
-      margin: 0 auto;
-      padding: 3rem 1rem 3.5rem;
-    }
-
-    h2.section-title {
-      font-size: 1.8rem;
-      font-weight: 900;
-      text-align: center;
-      margin-bottom: 2rem;
-    }
-
-    /* WHAT WE DO */
-    .features {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 1.4rem;
-    }
-
-    .feature {
-      background: var(--panel);
-      padding: 1.5rem;
-      border-radius: 18px;
-      box-shadow: 0 6px 25px rgba(0, 0, 0, 0.08);
-      transition: 0.25s ease;
-    }
-
-    .feature:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.12);
-    }
-
-    .feature h3 {
-      margin: 0 0 0.4rem;
-      font-weight: 800;
-    }
-
-    .feature p {
-      margin: 0;
-      color: var(--muted);
-      line-height: 1.45;
-    }
-
-    /* NEXT EVENT */
-    .next-wrap {
-      background: linear-gradient(180deg, #fff 0%, #f7f7f7 100%);
-      border-top: 1px solid #eee;
-      padding: 3rem 1rem 4rem;
-    }
-
-    .next-wrap h2 {
-      text-align: center;
-      font-size: 1.8rem;
-      font-weight: 900;
-      margin-bottom: 2rem;
-    }
-
-    .event-card {
-      background: var(--panel);
-      border-radius: 20px;
-      box-shadow: 0 10px 32px rgba(0, 0, 0, 0.1);
-      max-width: 680px;
-      margin: 0 auto;
-      padding: 1.8rem;
-      text-align: center;
-    }
-
-    .event-chip {
-      display: inline-block;
-      background: var(--scarlet);
-      color: #fff;
-      font-weight: 800;
-      font-size: 0.85rem;
-      padding: 0.35rem 1rem;
-      border-radius: 999px;
-      margin-bottom: 0.8rem;
-    }
-
-    .event-card h3 {
-      font-size: 1.35rem;
-      font-weight: 900;
-      margin: 0.3rem 0 0.5rem;
-    }
-
-    .event-card p {
-      color: #444;
-      margin: 0.2rem 0;
-      line-height: 1.45;
-    }
-
-    .event-card .btn-group {
-      display: flex;
-      justify-content: center;
-      gap: 0.8rem;
-      margin-top: 1.2rem;
-      flex-wrap: wrap;
-    }
-
-    footer {
-      background: #121212;
-      color: #fff;
-      text-align: center;
-      padding: 1.3rem 1rem;
-      font-size: 0.9rem;
-    }
+    /* Footer */
+    footer{background:#121212;color:#fff;text-align:center;padding:1.3rem 1rem;font-size:.92rem}
   </style>
 </head>
-
 <body>
   <header>
     <a class="brand" href="index.html">
-      <img src="assets/images/osu-daytraders-logo.png" alt="OSU Day Traders Logo" />
+      <img src="assets/images/osu-daytraders-logo.png" alt="OSU Day Traders Logo">
       <span>OSU Day Traders</span>
     </a>
     <nav>
@@ -274,49 +98,59 @@
     </nav>
   </header>
 
+  <!-- HERO -->
   <section class="hero">
-    <div class="hero-content">
+    <div class="hero-inner">
       <h1>Learn. Trade. Grow.</h1>
       <p>The official day trading community at The Ohio State University. Workshops, strategy labs, and a process-first culture built around risk, review, and accountability.</p>
-      <div class="btn-group">
-        <a href="applications.html" class="btn btn-white">Join the club</a>
-        <a href="events.html" class="btn btn-outline">See upcoming events</a>
+      <div class="btn-row">
+        <a class="btn btn-white" href="applications.html">Join the club</a>
+        <a class="btn btn-outline" href="events.html">See upcoming events</a>
       </div>
     </div>
   </section>
 
+  <!-- WHAT WE DO -->
   <section class="section">
-    <h2 class="section-title">What we do</h2>
+    <h2>What we do</h2>
     <div class="features">
-      <div class="feature">
+      <article class="feature">
         <h3>Strategy Lab</h3>
         <p>Backtesting, journal review, and Q&amp;A together to make process repeatable.</p>
-      </div>
-      <div class="feature">
+      </article>
+      <article class="feature">
         <h3>Risk &amp; Process</h3>
         <p>Position sizing, stop logic, and pre/post-trade checklists that keep you sane.</p>
-      </div>
-      <div class="feature">
+      </article>
+      <article class="feature">
         <h3>Speakers &amp; Workshops</h3>
         <p>Traders, quants, and builders sharing real lessons, not highlight reels.</p>
-      </div>
+      </article>
     </div>
-    <div style="text-align:center;margin-top:2rem;">
-      <a href="resources.html" class="btn btn-outline">View resources</a>
+    <div class="center">
+      <a class="btn btn-outline" href="resources.html">View resources</a>
     </div>
   </section>
 
+  <!-- NEXT UPCOMING EVENT (compact, centered card) -->
   <section class="next-wrap">
     <h2>Next upcoming event</h2>
     <div class="event-card">
-      <span class="event-chip">Weekly</span>
-      <h3>Weekly Meeting</h3>
-      <p><strong>When:</strong> Monday, November 17 · 6:00 PM ET</p>
-      <p><strong>Where:</strong> Virtual (Zoom)</p>
-      <p>Market rundown, risk review, and a breakout scalp workflow.</p>
-      <div class="btn-group">
-        <a href="https://osu.zoom.us/meeting/register/OBKK4x6ARW-nLENvzqbGAg" target="_blank" class="btn btn-white">Register on Zoom</a>
-        <a href="https://calendar.google.com" target="_blank" class="btn btn-outline">Add to Google Calendar</a>
+      <div style="text-align:center">
+        <span class="pill">Weekly</span>
+      </div>
+      <h3 class="event-title">Weekly Meeting</h3>
+
+      <div class="meta-list">
+        <div class="meta-row"><b>When:</b><span>Monday, November 17 · 6:00 PM ET</span></div>
+        <div class="meta-row"><b>Where:</b><span>Virtual (Zoom)</span></div>
+      </div>
+
+      <p class="desc">Market rundown, risk review, and a breakout scalp workflow.</p>
+
+      <div class="event-actions">
+        <a class="btn btn-red" target="_blank" href="https://osu.zoom.us/meeting/register/OBKK4x6ARW-nLENvzqbGAg">Register on Zoom</a>
+        <a class="btn btn-ghost" target="_blank" href="https://calendar.google.com">Add to Google Calendar</a>
       </div>
     </div>
   </section>
@@ -324,9 +158,6 @@
   <footer>
     <p>&copy; <span id="year"></span> OSU Day Traders • Student Organization</p>
   </footer>
-
-  <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
-  </script>
+  <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
 </body>
 </html>
